# intervals-mcp-server

./: README.md  pyproject.toml
cloudflare/: schema.sql
docs/: cloudflare-google-sso-deployment.md
src/intervals_mcp_server/: auth_bootstrap.py  auth_models.py  auth_provider.py  auth_routes.py  auth_runtime.py  auth_storage.py  config.py  current_user.py  google_oauth.py  mcp_instance.py  security.py  server.py  worker.py
src/intervals_mcp_server/api/: client.py
src/intervals_mcp_server/tools/: __init__.py  credentials.py
src/intervals_mcp_server/utils/: formatting.py  validation.py
tests/: test_auth_flow.py  test_security.py
workers-ts/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers-ts/src/: config.ts  googleOAuth.ts  index.ts  intervals.ts  oauth.ts  repository.ts  security.ts  tools.ts  types.ts  utils.ts
workers-ts/tests/: config.test.ts  index.test.ts  intervals.test.ts  oauth.test.ts  repository.test.ts  security.test.ts  utils.test.ts
workers-ts/tests/helpers/: d1.ts  env.ts
